--- a/ui/public/style.css
+++ b/ui/public/style.css
@@ -6,3 +6,52 @@
   margin-right: 10px;
   font-size: 1.2em;
 }
+
+.rt-tokenizer {
+  border: 4px solid #ddd;
+  border-radius: 4px;
+  display: flex;
+  height: 44px;
+  padding: 5px;
+  width: 600px;
+}
+
+.rt-tokenizer__user-input {
+  border: none;
+  display: inline-block;
+  flex-grow: 1;
+  font-size: 16px;
+  height: 28px;
+  padding: 4px;
+  resize: none;
+  overflow: hidden;
+}
+
+.rt-tokenizer__user-input:focus {
+  outline: 0;
+}
+
+.rt-cell {
+  background-color: #ddd;
+  border: 1px solid #bbb;
+  border-radius: 6px;
+  color: #444;
+  display: inline-block;
+  height: 28px;
+  margin: 0 3px 3px 0;
+  padding: 4px 8px;
+}
+
+.rt-cell__content,
+.rt-cell__delete {
+  display: inline-block;
+  margin: 0;
+  vertical-align: baseline;
+}
+
+.rt-cell__delete {
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: bold;
+  margin-left: 8px;
+}
